fixed the overflow in 'Product'

--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -68,5 +68,6 @@
     .detailsSection{
         justify-content: center;
         grid-template-columns: 200px;
+        width: 100%;
     }
 }
